<resources>
    <string name="app_name">CoffeeCompass</string>
    <string name="logo_description">CoffeeCompass Logo</string>
    <string name="search_by_coffee">Search by coffee type</string>
    <string name="search">search by key words</string>
    <string name="search_by_place">search by coffee shop</string>
    <string name="products">Products</string>
    <string name="reviews">Reviews</string>
    <string name="default_web_client_id">0</string>
    <string name="login_with_email">Login with Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_is_required">Login is required</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">User name</string>
    <string name="followers_0">Followers: 0</string>
    <string name="following_0">Following: 0</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="select_profile_image">Select Profile Image</string>
    <string name="upload_image_profile">Upload profile picture</string>
    <string name="user_settings">User Settings</string>
    <string name="your_reviews">Your Reviews</string>
    <string name="coffee_shop_name">Coffee Shop Name</string>
    <string name="rating">Rating</string>
    <string name="comment">Comment</string>
    <string name="selected_image">Selected Image</string>
    <string name="write_your_review_here">Write your review here...</string>
    <string name="upload_image">Upload image</string>
    <string name="submit_review">Submit Review</string>
    <string name="select_coffee_shop">Select Coffee Shop</string>
    <string name="add_review">Add Review</string>
    <string name="you_have_no_reviews_click_here_to_add_a_review">You have no reviews. Click here to add a review.</string>
    <string name="flavor">Flavor</string>
    <string name="strong">Strong</string>
    <string name="mild">Mild</string>
    <string name="decaf">Decaf</string>
    <string name="saving_review">Saving review...</string>
    <string name="price">Price</string>
    <string name="one_dollar">$</string>
    <string name="two_dollars">$$</string>
    <string name="three_dollars">$$$</string>
    <string name="four_dollars">$$$$</string>
    <string name="five_dollars">$$$$$</string>
    <string name="user_preferences">User Preferences</string>
    <string name="update_picture">Update Picture</string>
    <string name="update_password">Update Password</string>
    <string name="logout">Logout</string>
    <string name="like_button">like button\n</string>
</resources>