<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageViewSelectedImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/darker_gray"
        android:contextClickable="true"
        android:contentDescription="@string/selected_image"/>

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextViewCoffeeShopName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/select_coffee_shop"
        android:padding="8dp"
        android:background="@android:color/white"/>

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:numStars="5"
        android:stepSize="1.0"
        android:rating="4.8"/>

    <EditText
        android:id="@+id/editTextReviewBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/write_your_review_here"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/white"/>

    <Button
        android:id="@+id/buttonSelectImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_image"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/buttonSubmitReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_review"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"/>
</LinearLayout>
